@@ -42,7 +42,7 @@ private:
 	OptionsMap options;
 protected:
 /** Returns the value of the currently selected option. */
-	QString value ();
+	QString value (const QString &modifier);
 };
 
 #endif
